feat: rebuild as a reproducible Nix multi-arch image
Replaces the hand-written Dockerfile with a Nix flake that produces a reproducible, multi-arch image: it fetches the hash-pinned Spigot jar from the spigot-build flake input, ships a jlink-trimmed JRE chosen per Minecraft version, and runs the server under the mc-server-init PID-1 init that keeps a real PTY console (the > prompt and line editing), injects commands through a named pipe via 'docker exec ... console', and turns SIGTERM or Ctrl-C into a graceful stop. Reworks the entrypoint, rebuilds CI/CD into a per-version image matrix with build-provenance attestation and a Docker Hub description sync, and refreshes the dependabot, labeler, stale and community workflows.